# gb_emulator

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
gb_emulator/: CMakeLists.txt  cartridge_reader.cpp  cpu.cpp  cpu.h  main.cpp
